<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/container_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_login"
            android:textSize="40sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:fontFamily="@font/asap_bold" />

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_email_user"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_marginBottom="5sp"
                android:fontFamily="@font/asap_bold" />

            <EditText
                android:id="@+id/editUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_users"
                android:background="@drawable/container_input"
                android:hint="@string/hint_email"
                android:textColorHint="@color/color_input"
                android:textColor="@color/black"
                android:padding="10dp"
                android:textSize="24sp"
                android:drawablePadding="10sp"
                android:fontFamily="@font/asap_bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_password"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_marginBottom="5sp"
                android:fontFamily="@font/asap_bold" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:drawableStart="@drawable/ic_password"
                android:background="@drawable/container_input"
                android:textColorHint="@color/color_input"
                android:textColor="@color/black"
                android:hint="@string/hint_password"
                android:padding="10dp"
                android:inputType="numberPassword"
                android:drawablePadding="10sp"
                android:fontFamily="@font/asap_bold" />
        </LinearLayout>

        <Button
            android:id="@+id/MainLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/color_button"
            android:fontFamily="@font/asap_bold"
            android:padding="5dp"
            android:text="@string/button_entrar"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/Cadastrar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:elegantTextHeight="true"
            android:focusable="true"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/button_naoPossuiCadastro"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
