<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_app"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/controle_rural"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_cyan_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/container_menu"
            android:fontFamily="@font/asap_bold"
            android:text="@string/title_menu"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gerenciarDadosTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/controle_rural">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/gerenciamento"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="32sp" />
    </LinearLayout>

    <Button
        android:id="@+id/cadastrarFrotas"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_margin="15dp"
        android:background="@color/dark_cyan_green"
        android:text="@string/cadastrar_frotas"
        android:textColor="#000000"
        android:textSize="18sp"
        app:icon="@drawable/tratoricone"
        app:iconGravity="top"
        app:iconPadding="0dp"
        app:iconSize="62dp"
        app:iconTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gerenciarDadosTitle" />

    <ListView
        android:id="@+id/ltv_frotas"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/dark_cyan_green"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadastrarFrotas"
        android:layout_marginTop="25dp" />

    <LinearLayout
        android:id="@+id/frotas_empty"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadastrarFrotas"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Não há frotas cadastradas"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_marginTop="40dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/container_login"
        android:orientation="horizontal"
        android:paddingHorizontal="35dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_voltar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/color_button"
            android:fontFamily="@font/asap_bold"
            android:padding="5dp"
            android:text="Voltar"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
